force-app/main/default/objects/Approval_Step__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved_Date</label>
    <type>Date</type>
</CustomField>