force-app/main/default/objects/Approval_Step__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <label>Step_Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>