force-app/main/default/objects/Approval_Step__c/fields/Step_Status__c.field-meta.xml
<CustomField>
    <fullName>Step_Status__c</fullName>
    <label>Step_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>